# arbitrage-opportunity-tracker

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  pairs.py  pyproject.toml  record.py
order_book_recorder/: alert.py  config.py  depth.py  logger.py  logtable.py  main.py  notify.py  opportunity.py  pricetable.py  record.py  recorder.py  redis.py  side.py  telegram.py  utils.py  watcher.py
scripts/: find-sterling.py  log-panel-sample.py  simple.py
