[tool.poetry]
name = "order-book-recorder"
version = "0.1.0"
description = "Record CEX orderbooks using CCXT"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "^1.57.95"
ccxtpro = {path = "./ccxt-pro/python", develop = true}
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
