[tool.poetry]
name = "order_book_recorder"
version = "0.1.0"
description = "Record CEX order books using CCXT"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "^1.57.95"
ccxtpro = {path = "./ccxt-pro/python", develop = true}
ipdb = "^0.13.9"
coloredlogs = "^15.0.1"
rich = "^10.12.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
